--- a/src/css/imports/_spacing.scss
+++ b/src/css/imports/_spacing.scss
@@ -760,8 +760,11 @@
     padding-bottom: var(--spacing-extra-large);
   }
   .pv6-l {
-    padding-top: var(--spacing-extra-extra-large);
-    padding-bottom: var(--spacing-extra-extra-large);
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    // padding-top: var(--spacing-extra-extra-large);
+    // padding-bottom: var(--spacing-extra-extra-large);
+    
   }
   .pv7-l {
     padding-top: var(--spacing-extra-extra-extra-large);
